Update documentation and add WSL setup guide for improved Windows experience
- Enhanced README with WSL recommendations for Windows users.
- Updated docker-compose.yml to specify optional .env file.
- Added WSL setup instructions in multiple documentation files.
- Included environment variable examples in example.env.
- Improved troubleshooting guide with WSL-specific solutions.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   python-app:
     build: .
@@ -11,7 +9,8 @@ services:
       - PYTHONUNBUFFERED=1
       - PYTHONDONTWRITEBYTECODE=1
     env_file:
-      - .env
+      - path: .env
+        required: false
     stdin_open: true
     tty: true
     restart: unless-stopped
